<resources>
    <string name="app_name">Devamsızlık Takibi</string>
    <string name="settings">Ayarlar</string>

    <string name="status_bar_notification_info_overflow">999+</string>

    <string name="syllabus">Ders Programı</string>

    <string name="title_activity_alarm_aninda_acilan">AlarmAnindaAcilan</string>
    <string name="holidays">Tatiller</string>

    <string name="lessons">Dersler</string>
    <string name="drawer_close">Drawer Kapat</string>

    <string name="drawer_open">Drawer Aç</string>
    <string name="alarm_options">Alarm Seçenekleri</string>
    <string name="sorgu_zamani">Başlangıç Zamanı</string>
    <string name="zorluk_derecesi">Zorluk Derecesi</string>
    <string name="soru_sayisi">Soru Sayısı</string>
    <string name="alarm_sesi">Alarm Sesi</string>
    <string name="guncelle">Güncelle</string>
    <string name="devamsizlik_secenekleri">Devamsızlık Seçenekleri</string>
    <string name="vize">Vize</string>
    <string name="finall">Final</string>
    <string name="_01">01</string>
    <string name="_08">08</string>
    <string name="kalan_sure">Sınavlar İçin Kalan Süre (Hafta)</string>
    <string name="bilgi_txt">Kayıtlı ders bulunamadı. Lütfen verilerinizi yapılandırın.</string>
    <string name="cal">Çal</string>
    <string name="time">00:00</string>
    <string name="title_activity_maps">Map</string>
    <string name="alarm_sesini_secin">Alarm sesini seçin.</string>
</resources>
