<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_backgorund_multi_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:paddingTop="60dp"
        app:layout_constraintTop_toTopOf="@+id/myToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/backround_radius"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/etiket_baslangic_zamani"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/arsenal"
                    android:text="@string/sorgu_zamani"
                    android:textColor="@color/colorText"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/text_baslangic_zamani"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:fontFamily="@font/arsenal"
                    android:text="@string/sorgu_zamani"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorWhiting"
                    android:textSize="20sp" />

            </LinearLayout>

            <view
                android:id="@+id/view2"
                class="android.support.v7.widget.ActionMenuView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/etiket_zorluk"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/arsenal"
                    android:text="@string/zorluk_derecesi"
                    android:textColor="@color/colorText"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/text_zorluk"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:fontFamily="@font/arsenal"
                    android:text="@string/zorluk_derecesi"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorWhiting"
                    android:textSize="20sp" />

            </LinearLayout>

            <view
                android:id="@+id/view7"
                class="android.support.v7.widget.ActionMenuView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/etiket_soru_sayisi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/arsenal"
                    android:text="@string/soru_sayisi"
                    android:textColor="@color/colorText"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/text_soru_sayisi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:fontFamily="@font/arsenal"
                    android:text="@string/soru_sayisi"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorWhiting"
                    android:textSize="20sp" />

            </LinearLayout>

            <view
                android:id="@+id/view10"
                class="android.support.v7.widget.ActionMenuView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/etiket_alarm_sesi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/arsenal"
                    android:text="@string/alarm_sesi"
                    android:textColor="@color/colorText"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/text_alarm_sesi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ems="10"
                    android:fontFamily="@font/arsenal"
                    android:text="@string/alarm_sesi"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorWhiting"
                    android:textSize="20sp" />

            </LinearLayout>  <view
            android:id="@+id/view11"
            class="android.support.v7.widget.ActionMenuView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/line" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_alarm_guncelle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/button_radius"
            android:text="@string/guncelle"
            android:textColor="@color/colorWhiting" />


    </LinearLayout>

    <include
        android:id="@+id/myToolbar"
        layout="@layout/toolbar" />
</android.support.constraint.ConstraintLayout>